	  after the window is resized or we come out of suspend mode.
	  Changes to do_cont() and handle_sigwinch(). (DLR)
- files.c:
  add_open_file()
	- Rearrange the NANO_SMALL #ifdef so that the code to set the
	  MODIFIED flag in open_files->flags is included only once.
	  (DLR)
- nano.c:
  do_delete()
	- Tweak for efficiency. (David Benbennick)
- proto.h:
	- Remove unused add_marked_sameline() prototype. (DLR)
- rcfile.c:
	- Move "rebinddelete" up in the list of options so that the list
	  is in alphabetical order. (DLR)
- search.c:
  not_found_msg()
	- Convert to properly handle strings generated by
	  display_string() that have been used in the search prompt
	  since 1.3.0. (David Benbennick)
- utils.c:
  nstricmp(), nstrnicmp()
	- Add extra blank lines for greater readability, and remove
	  unneeded test for n's being less than zero (since it's already
	  been tested for being greater than zero or equal to zero at
	  that point) from nstrnicmp(). (DLR)
  stristr()
	- Rename to nstristr() to avoid a potential conflict with an
	  existing stristr() function, and move up to just after
	  nstrnicmp(). (DLR)  David Benbennick: Tweak for efficiency.
- winio.c:
  get_verbatim_kbinput()
	- Refactor the output in the DEBUG #ifdef.  It didn't work
	  properly ever since this function was changed to use an int*
	  instead of a char*. (DLR)
  edit_refresh()
	- Remove apparently unneeded leaveok() calls. (David Benbennick)
- nano.texi:
	- Fix inaccuracies: Meta-L now toggles line wrapping, and Meta-<
	  and Meta-> aren't toggles. (DLR)

GNU nano 1.3.2 - 2004.03.31
- General:
	- Change instances in the code that refresh the entire edit
	  window when color support is enabled (in order to properly
	  handle multi-line color regexes) to only do so when
	  it's necessary, i.e, when COLOR_SYNTAX is set. (DLR)
	- Minor cosmetic tweaks to the code involving direction keys.
	  NANO_UP_KEY and NANO_DOWN_KEY are now NANO_PREVLINE_KEY and